--- a/actions/build-resume/Dockerfile
+++ b/actions/build-resume/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:latest
+FROM ubuntu:latest
 LABEL "maintainer"="Nicola Lamacchia <github@nicola.dev>"
 LABEL "repository"="https://github.com/nicolalamacchia/resume-action"
 LABEL "homepage"="https://github.com/nicolalamacchia/resume-action"
@@ -6,14 +6,12 @@ LABEL "com.github.actions.name"="Convert TeX to PDF"
 LABEL "com.github.actions.description"="Convert documents to PDF using xelatex."
 LABEL "com.github.actions.icon"="code"
 LABEL "com.github.actions.color"="blue"
-RUN apt-get update && \
-    apt-get install --yes --no-install-recommends \
+RUN apt update && \
+    apt install --yes --no-install-recommends \
     texlive-fonts-extra \
-    texlive-fonts-recommended \
-    texlive-generic-recommended \
     texlive-lang-english \
     texlive-xetex && \
-    apt-get autoclean && apt-get --purge --yes autoremove && \
+    apt autoclean && apt --purge --yes autoremove && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
