--- a/actions/build-resume/Dockerfile
+++ b/actions/build-resume/Dockerfile
@@ -7,12 +7,12 @@ LABEL "com.github.actions.description"="Convert documents to PDF using xelatex."
 LABEL "com.github.actions.icon"="code"
 LABEL "com.github.actions.color"="blue"
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt update && \
-    apt install --yes --no-install-recommends \
+RUN apt-get update && \
+    apt-get install --yes --no-install-recommends \
     texlive-fonts-extra \
     texlive-lang-english \
     texlive-xetex && \
-    apt autoclean && apt --purge --yes autoremove && \
+    apt-get autoclean && apt-get --purge --yes autoremove && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
