--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,16 @@ jobs:
         with:
           name: files
           path: public/
+      - name: Set Release Tag
+        run: echo "::set-env name=TIMESTAMP::$(date +'%Y%m%d-%H%M%S')"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
+          tag_name: ${{ env.TIMESTAMP }}
+          release_name: Release ${{ env.TIMESTAMP }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
