--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,15 +21,16 @@ jobs:
           name: files
           path: public/
       - name: Set Release Tag
-        run: echo "::set-env name=TIMESTAMP::$(date +'%Y%m%d-%H%M%S')"
+        id: timestamp
+        run: echo "::set-output name=timestamp::$(date +'%Y%m%d-%H%M%S')"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.TIMESTAMP }}
-          release_name: Release ${{ env.TIMESTAMP }}
+          tag_name: ${{ steps.timestamp.outputs.date }}
+          release_name: Release ${{ steps.timestamp.outputs.date }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
