--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,4 +43,19 @@ jobs:
           asset_path: ./public/resume.pdf
           asset_name: resume.pdf
           asset_content_type: application/pdf
+      - name: Notify
+        run: |
+          curl --fail -X POST \
+            --data-urlencode "token=${{ secrets.RELEASE_TOKEN }}" \
+            --data-urlencode "app=resume" \
+            --data-urlencode "ts=${{ steps.timestamp.outputs.ts }}" \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            https://nicola.link/ci-update
+      - name: Cleanup on Failure
+        if: failure()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@${${GITHUB_SERVER_URL#http://}#https://}/${GITHUB_REPOSITORY}.git
+          git push --delete origin ${{ steps.timestamp.outputs.ts }}
 
