--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
 defaults:
   run:
     working-directory: .
+env:
+  OUT_DIR: public
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -16,13 +18,11 @@ jobs:
         uses: actions/checkout@v3
       - name: TeX to PDF
         uses: ./actions/build-resume
-        env:
-          OUT_DIR: public
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: files
-          path: public/
+          path: ${{ env.OUT_DIR }}/
       - name: Set Release Tag
         id: timestamp
         run: echo "::set-output name=timestamp::$(date +'%Y%m%d-%H%M%S')"
@@ -43,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./public/resume.pdf
+          asset_path: ./${{ env.OUT_DIR }}/resume.pdf
           asset_name: resume.pdf
           asset_content_type: application/pdf
       - name: Notify
