--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: "Generate PDF from TeX"
 on:
   push:
     branches: [main]
+    paths:
+      - 'resume.tex'
+      - 'resume.cls'
 defaults:
   run:
     working-directory: .
