Move away from set-output in the build workflow
set-output is now deprecated, use the GITHUB_OUTPUT environment file
instead.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           path: ${{ env.OUT_DIR }}/
       - name: Set Release Tag
         id: timestamp
-        run: echo "::set-output name=timestamp::$(date +'%Y%m%d-%H%M%S')"
+        run: echo "timestamp=$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_OUTPUT
       - name: Create Release
         id: create_release
         uses: nicolalamacchia/create-release@v2
